--- a/src/components/pagePrincipale.css
+++ b/src/components/pagePrincipale.css
@@ -1,4 +1,4 @@
-body{
+body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -6,7 +6,7 @@ body{
 
 @media only screen and (max-width: 800px) {
   .RechargeBar {
-    width: 60%;
+    width: 90%;
     height: 40px;
     background: #f5f5f5;
     border-radius: 25px;
@@ -73,24 +73,15 @@ body{
   }
 }
 
-.ButtonMainImg {
+.BodyMain {
+}
+
+.ButtonBodyMain {
+  position: absolute;
+  width: 269px;
+  height: 70px;
+  left: 73px;
+  top: 652px;
   background: #12bcd6;
   border-radius: 10px;
-  width: 100%;
-  height: 100%;
-}
-
-.ButtonMain {
-  text-align: right;
-  position: relative;
-  border: 2px solid #ffffff;
-  border-radius: 8px;
-  filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25));
-}
-
-.NavButton {
-  text-align: right;
-  position: relative;
-  display: inherit;
-  margin-right: 50px;
 }
