--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,15 +1,15 @@
 .container-slider {
-  max-width: 700px;
-  height: 500px;
-  margin: 100px auto 0;
-  position: relative;
+  max-width: 100%;
+  height: 100%;
   overflow: hidden;
+  align-items: center;
+  justify-content: right;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .slide {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: calc(300px + 10rem);
   position: absolute;
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
@@ -27,13 +27,18 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background: #f1f1f1;
+  background: hsl(0, 0%, 95%);
   border: 1px solid rgba(34, 34, 34, 0.287);
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  box-shadow: 10px 10px 10px 0.1px black;
+  transition: all 0.2s ease-in-out;
+}
+.btn-slide:hover {
+  background: hsl(0, 0%, 50%);
 }
 
 .btn-slide img {
@@ -43,12 +48,12 @@
 }
 .prev {
   top: 50%;
-  left: 20px;
+  left: 50%;
   transform: translateY(-60%);
 }
 .next {
   top: 50%;
-  right: 20px;
+  right: 3.5%;
   transform: translateY(-60%);
 }
 
