--- a/src/components/RechercheStyle.css
+++ b/src/components/RechercheStyle.css
@@ -3,12 +3,15 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  
   border-radius: 20px;
   background-color: grey;
   margin: 20px 20vh;
-  color: rgb(245, 245, 245);
-  text-shadow: 20px rgb(192, 192, 192);
+ 
+}
+.Titre_Style{
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  
 }
 
 
@@ -17,7 +20,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 40px 20px;
+  padding: 20px 20px;
   overflow: hidden;
 }
 
@@ -44,6 +47,10 @@
     margin: 5px 10px;
     background-color: white;
   }
+  .Titre_Style{
+    text-shadow: 2px 2px 2px black;
+    color: white;
+  }
 
   .section_Recherche_Style{
     width: auto;
@@ -58,7 +65,7 @@
     overflow: hidden;
     background-color: grey;
     border-radius: 20px;
-    margin: 0;
+    margin: 20px 0;
 }
 .Titre_Stylerecherche{
   display: flex;
@@ -94,7 +101,7 @@
     overflow: hidden;
     background-color: grey;
     border-radius: 20px;
-    margin: 0;
+    margin: 10px 0;
     padding: 0;
 }
 .Titre_Stylerecherche{
@@ -107,6 +114,10 @@
   color: rgb(245, 245, 245);
   text-shadow: 20px rgb(192, 192, 192);
   margin: 0;
+}
+.Titre_Style{
+  text-shadow: 2px 2px 2px black;
+  color: white;
 }
 }
 
