--- a/src/components/pagePrincipale.css
+++ b/src/components/pagePrincipale.css
@@ -1,8 +1,26 @@
-body{
+body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+.button-aleatoir {
+  display: flex;
+  margin: 10px auto;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  margin: 20px auto;
+  width: 270px;
+  height: 70px;
+  left: 75px;
+  top: 671px;
+  background: #12bcd6;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  font-size: large;
+}
+
+
 
 @media only screen and (max-width: 800px) {
   .RechargeBar {
@@ -16,6 +34,7 @@ body{
     padding-left: 41px;
     font-size: 16px;
   }
+  
 
   .HeadMain {
     display: flex;
@@ -38,6 +57,22 @@ body{
     top: 6px;
     left: 34px;
     height: 26px;
+  }
+  
+  .button-aleatoir {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    margin: 20px auto;
+    width: 100px;
+    height: 70px;
+    background: #12bcd6;
+    border: none;
+    box-shadow: 2px 2px 2px grey;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-size: large;
   }
 }
 
@@ -71,6 +106,25 @@ body{
     top: 11px;
     left: 9px;
   }
+  .button-aleatoir {
+    display: flex;
+    margin: 10px auto;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    margin: 20px auto;
+    width: 270px;
+    height: 70px;
+    left: 75px;
+    top: 671px;
+    background: #12bcd6;
+    border: none;
+    box-shadow: 2px 2px 2px grey;
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    font-size: xx-large;
+  }
+  
 }
 
 .ButtonMainImg {
@@ -94,3 +148,4 @@ body{
   display: inherit;
   margin-right: 50px;
 }
+
