--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -14,31 +14,56 @@
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
 }
+
+@media only screen and (min-width: 800px) {
+
+  .slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    position: absolute;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+
 .slide img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+  border-radius: 6px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}}
+
 .active-anim {
   opacity: 1;
 }
 
 .btn-slide {
   width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background: hsl(0, 0%, 95%);
   border: 1px solid rgba(34, 34, 34, 0.287);
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 10px 10px 10px 0.1px black;
+  box-shadow: 3px 3px 10px 0.1px black;
   transition: all 0.2s ease-in-out;
+  width: 49.55px;
+height: 49.55px;
+left: 1259px;
+top: 223px;
+background: #12BCD6;
+border-radius: 10px;
 }
 .btn-slide:hover {
-  background: hsl(0, 0%, 50%);
+  background: hsl(172, 52%, 50%);
 }
 
 .btn-slide img {
@@ -47,21 +72,20 @@
   pointer-events: none;
 }
 .prev {
-  top: 50%;
-  left: 50%;
+  top: 29%;
+  left: 82%;
   transform: translateY(-60%);
 }
 .next {
-  top: 50%;
-  right: 3.5%;
+  top: 29%;
+  left: 93%;
   transform: translateY(-60%);
 }
 
-
 .container-dots {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
+  position: relative;
+  bottom: -428px;
+  left: 90%;
   transform: translateX(-50%);
   display: flex;
 }
