--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -16,7 +16,6 @@
 }
 
 @media only screen and (min-width: 800px) {
-
   .slide img {
     width: 100%;
     height: 100%;
@@ -30,16 +29,16 @@
 }
 
 @media only screen and (min-width: 800px) {
-
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 6px;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-}}
+  .slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+}
 
 .active-anim {
   opacity: 1;
@@ -56,11 +55,11 @@
   box-shadow: 3px 3px 10px 0.1px black;
   transition: all 0.2s ease-in-out;
   width: 49.55px;
-height: 49.55px;
-left: 1259px;
-top: 223px;
-background: #12BCD6;
-border-radius: 10px;
+  height: 49.55px;
+  left: 1259px;
+  top: 223px;
+  background: #12bcd6;
+  border-radius: 10px;
 }
 .btn-slide:hover {
   background: hsl(172, 52%, 50%);
