--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
+  color: white;
+  background-color: rgb(9, 141, 158);
 }
