--- a/src/components/pagePrincipale.css
+++ b/src/components/pagePrincipale.css
@@ -3,6 +3,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .button-aleatoir {
   display: flex;
   margin: 10px auto;
@@ -20,10 +21,7 @@ body {
   font-size: large;
 }
 
-
-
 @media only screen and (max-width: 800px) {
-
   .ButtonBodyMain {
     margin-bottom: 10px;
   }
@@ -46,7 +44,6 @@ body {
     padding-left: 41px;
     font-size: 16px;
   }
-  
 
   .HeadMain {
     display: flex;
@@ -70,7 +67,7 @@ body {
     left: 35px;
     height: 26px;
   }
-  
+
   .button-aleatoir {
     display: flex;
     justify-content: center;
@@ -113,7 +110,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-right: 60px;
-    margin-bottom: 20vh;
+    margin-bottom: 4vh;
   }
 
   .ContainerSearch {
@@ -143,7 +140,6 @@ body {
     text-shadow: 2px 2px 2px black;
     font-size: xx-large;
   }
-  
 }
 
 .BodyMain h1 {
@@ -164,10 +160,10 @@ body {
   background: #12bcd6;
   border-radius: 10px;
   cursor: pointer;
+  color: white;
 }
 
 .CarrousselMain {
   width: 50%;
   height: calc(300px + 10rem);
 }
-
