--- a/src/components/Jeu.css
+++ b/src/components/Jeu.css
@@ -32,7 +32,7 @@
   align-items: center;
   background-color: rgba(1, 185, 209, 0.822);
   height: 57vh;
-  width: 80vw;
+  width: 109%;
   margin: 10px auto;
   border-radius: 30px;
   flex-direction: column;
