--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,31 +1,28 @@
-.container-slider {
-  max-width: 100%;
-  height: 100%;
-  overflow: hidden;
-  align-items: center;
-  justify-content: right;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
 .slide {
-  width: 50%;
+  width: 9%;
   height: calc(300px + 10rem);
   position: absolute;
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (max-width: 800px) {
   .slide img {
-    width: 100%;
+    width: 1075%;
     height: 100%;
     object-fit: cover;
     border-radius: 6px;
-    justify-content: center;
     text-align: center;
-    align-items: center;
     position: absolute;
   }
+
+  .container-slider {
+    max-width: 188%;
+    height: 100%;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    width: 53vh;
+}
 }
 
 @media only screen and (min-width: 800px) {
@@ -37,6 +34,15 @@
     justify-content: center;
     text-align: center;
     align-items: center;
+  }
+
+  .container-slider {
+    max-width: 100%;
+    height: 100%;
+    overflow: hidden;
+    align-items: center;
+    justify-content: right;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
 }
 
