--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   color: white;
-  background-color: rgb(9, 141, 158);
+  background-color: #12BCD6;
 }
