--- a/src/components/RechercheStyle.css
+++ b/src/components/RechercheStyle.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   border-radius: 20px;
-  background-color: rgba(1, 185, 209, 0.822);
+  background-color: #F5F5F5;
   margin: 20px 10vh;
 }
 .Titre_Style {
@@ -57,7 +57,7 @@
     align-items: center;
     padding: 40px 20px;
     overflow: hidden;
-    background-color: grey;
+    background-color: #F5F5F5;
     border-radius: 20px;
     margin: 20px 0;
   }
@@ -67,7 +67,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    background-color: grey;
+    background-color: #F5F5F5;
     color: rgb(245, 245, 245);
     text-shadow: 20px rgb(192, 192, 192);
     margin: 20px;
@@ -93,26 +93,20 @@
     align-items: center;
     padding: 40px 20px;
     overflow: hidden;
-    background-color: grey;
+    background-color: #F5F5F5;
     border-radius: 20px;
     margin: 10px 0;
     padding: 0;
   }
   .Titre_Stylerecherche {
-    display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    background-color: grey;
     color: rgb(245, 245, 245);
-    text-shadow: 20px rgb(192, 192, 192);
     margin: 0;
   }
-  .Titre_Style {
-    text-shadow: 2px 2px 2px black;
-    color: white;
-  }
+
   .slide {
     width: 100%;
   }
