--- a/src/components/pagePrincipale.css
+++ b/src/components/pagePrincipale.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -38,7 +38,6 @@ body {
   }
 
   .BodyMain {
-    display: flow-root list-item;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -94,7 +93,6 @@ body {
     text-shadow: 2px 2px 2px black;
     font-size: large;
   }
-
 }
 
 @media only screen and (min-width: 801px) {
@@ -106,14 +104,14 @@ body {
 
   .RechargeBar {
     width: 400px;
-    height: 50px;
+    height: 40px;
     background: #f5f5f5;
     border-radius: 25px;
     justify-content: center;
     text-align: left;
     align-items: center;
     padding-left: 44px;
-    font-size: 20px;
+    font-size: 17px;
   }
 
   .HeadMain {
@@ -131,8 +129,9 @@ body {
 
   .ContainerSearchImg {
     position: absolute;
-    top: 11px;
-    left: 9px;
+    top: 8px;
+    left: 13px;
+    width: 25px;
   }
   .button-aleatoir {
     display: flex;
@@ -158,18 +157,18 @@ body {
   }
 }
 
-
 .BodyMain h1 {
   font-weight: 600;
   font-size: 3rem;
 }
 
 .BodyMain h3 {
-  font-weight: 100;
+  font-weight: 300;
   font-size: 1.1rem;
 }
 
 .ButtonBodyMain {
+  margin-top: 10px;
   width: 190px;
   height: 50px;
   left: 73px;
