--- a/src/components/pagePrincipale.css
+++ b/src/components/pagePrincipale.css
@@ -95,6 +95,9 @@ body {
     font-size: large;
   }
 
+  .TextMain {
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (min-width: 801px) {
@@ -155,6 +158,7 @@ body {
 
   .TextMain {
     margin-left: 20px;
+    margin-right: -5px;
   }
 }
 
