--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -1,49 +1,23 @@
+.container-slider {
+  max-width: 15600px;
+  height: 90%;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
 .slide {
-  width: 9%;
-  height: calc(300px + 10rem);
+  width: 100%;
+  height: 100%;
   position: absolute;
   opacity: 0;
   transition: opacity ease-in-out 0.4s;
 }
 
-@media only screen and (max-width: 800px) {
-  .slide img {
-    width: 1075%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 6px;
-    text-align: center;
-    position: absolute;
-  }
-
-  .container-slider {
-    max-width: 188%;
-    height: 100%;
-    overflow: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 53vh;
-}
-}
-
-@media only screen and (min-width: 800px) {
-  .slide img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 6px;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-  }
-
-  .container-slider {
-    max-width: 100%;
-    height: 100%;
-    overflow: hidden;
-    align-items: center;
-    justify-content: right;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  }
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .active-anim {
@@ -51,24 +25,18 @@
 }
 
 .btn-slide {
-  width: 60px;
-  border: 1px solid rgba(34, 34, 34, 0.287);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 3px 3px 10px 0.1px black;
-  transition: all 0.2s ease-in-out;
-  width: 49.55px;
-  height: 49.55px;
-  left: 1259px;
-  top: 223px;
-  background: #12bcd6;
-  border-radius: 10px;
-}
-.btn-slide:hover {
-  background: hsl(172, 52%, 50%);
+  background: none;
+  margin: 0 20px;
+  color: #fff;
 }
 
 .btn-slide img {
@@ -76,32 +44,66 @@
   height: 25px;
   pointer-events: none;
 }
+
+.imagestitle {
+  display: flex;
+  position: absolute;
+  bottom: 82vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  color: #fff;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  top: 30rem;
+}
+
+.imagestitle h1 {
+  font-weight: 600;
+  font-size: 3rem;
+  padding-bottom: 20px;
+}
+
+.imagestitle h2 {
+  font-weight: 400;
+  font-size: 1rem;
+}
+
 .prev {
-  top: 29%;
-  left: 82%;
+  top: 50%;
+  left: 20px;
   transform: translateY(-60%);
 }
+
 .next {
-  top: 29%;
-  left: 93%;
+  top: 50%;
+  right: 20px;
   transform: translateY(-60%);
 }
 
 .container-dots {
-  position: relative;
-  bottom: -428px;
-  left: 90%;
+  position: absolute;
+  bottom: 110px;
+  left: 50%;
   transform: translateX(-50%);
   display: flex;
 }
+
 .dot {
   width: 20px;
   height: 20px;
-  border-radius: 50%;
-  border: 3px solid #f1f1f1;
+  border: 3px solid #fff;
   margin: 0 5px;
-  background: #f1f1f1;
+  background: none;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  top: 30rem;
 }
+
 .dot.active {
-  background: rgb(32, 32, 32);
+  background: #fff;
 }
+
